{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerInGameWorld",
            "id": "2c1fddc6-7ba4-4754-aaa4-9f8cb73b14a7",
            "actions": [
                {
                    "name": "MovementAction",
                    "type": "PassThrough",
                    "id": "f4e839d4-068a-4d2e-a884-165e3303a283",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "44f3e0fe-a838-41b4-8d30-7dd842a1e27e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5854d9a3-5075-4cb6-9dc5-e01877fad17b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "57810fc5-6cfd-4d38-aed3-4dca35f1cd71",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c81e602d-905d-483b-b191-f416d24dc83b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b34f6943-ff2d-4ca0-a591-fa46fda5b9ac",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}